--- a/new_adversarial/config/mnist.yaml
+++ b/new_adversarial/config/mnist.yaml
@@ -9,5 +9,9 @@ model:
 training:
   num_epochs: 100
   batch_size: 128
-  learning_rate: 0.002
+  learning_rate: 0.0002
   beta1: 0.5
+  k_steps: 1
+  validate_every: 5
+  compute_parzen: false
+  parzen_sigma: 0.1
